# roaring-kittens

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
db/: schema.sql
docs/: STATUS.md
docs/superpowers/plans/: 2026-06-12-phase-0-1-foundation-analyst.md  2026-07-08-phase-1-5-trust-loop.md  2026-07-12-phase-2-committee.md  2026-07-13-phase-3-memory-theses.md  2026-07-18-phase-4a-reactivity.md  2026-07-21-phase-4b-multitenancy.md
docs/superpowers/specs/: 2026-06-04-moex-council-design.md  2026-06-04-roaring-kittens-design.md
scripts/: apply_schema.py  smoke_tinkoff.py
src/roaring_kittens/: alerts.py  budget.py  config.py  deps.py  logging_setup.py  main.py  positions_sync.py  price_watch.py  reflection.py  scheduler.py  scoring.py  users_service.py
src/roaring_kittens/ai/: analyst.py  embeddings.py  llm.py  pricing.py  schemas.py  usage_context.py
src/roaring_kittens/broker/: benchmark.py  fundamentals.py  models.py  position_note.py  tech.py  tinkoff_client.py
src/roaring_kittens/committee/: context.py  debate.py  graph.py  impact.py  manager.py  memory.py  render.py  risk.py  runner.py  (+4 more)
tests/: conftest.py  test_admin_render.py  test_alerts.py  test_alerts_buffer.py  test_analyst.py  test_ask_keyboards.py  test_benchmark.py  test_budget.py  test_calls_repo.py  test_config.py  test_council_context.py  test_council_graph.py  test_council_render.py  test_council_repo.py  test_council_runner.py  test_crypto.py  test_debate.py  test_digest.py  test_embedder.py  test_formatting.py  test_fundamentals.py  test_impact.py  test_imports.py  test_insights_repo.py  test_last_prices.py  test_llm.py  test_manager_risk.py  test_matching.py  test_memory_note.py  test_middleware.py  test_news_repository.py  test_onboarding_logic.py  test_owner.py  test_position_note.py  test_positions_sync.py  test_price_watch.py  test_ratelimit.py  test_reflection.py  test_retry.py  test_rss.py  (+16 more)
(+37 files in other folders)
