[project]
name = "roaring-kittens"
version = "0.1.0"
description = "Telegram-native AI investment co-pilot for MOEX"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7",
    "tinkoff-investments>=0.2.0b57",
    "openai>=1.50",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "feedparser>=6.0",
    "cryptography>=42",
    "structlog>=24",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pre-commit>=3.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
