[project]
name = "roaring-kittens"
version = "0.1.0"
description = "Telegram-native AI investment co-pilot for MOEX"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7",
    # Official Tinkoff SDK is git-only (removed from PyPI); installed --no-deps in CI/Docker.
    # We provide its real runtime deps here; the `tinkoff` namespace shim is unneeded under PEP 420.
    "grpcio>=1.59",
    "protobuf>=4.25,<5",
    "cachetools>=5.2",
    "python-dateutil>=2.8.2",
    "deprecation>=2.1",
    "openai>=1.50",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "feedparser>=6.0",
    "cryptography>=42",
    "structlog>=24",
    "langgraph>=0.2",
    "pgvector>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pre-commit>=3.7"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
